# atlas

./: .gitignore  .skillgateignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
_project/docs/ARCHITECTURE/decisions/: ADR-001-archive-layout.md
docs/superpowers/plans/: 2026-06-14-f3a-clikit-foundation.md  2026-06-14-f3b-domain-model.md  2026-06-14-f3c-outbox-push.md  2026-06-14-f3d-pull-longpoll.md  2026-06-14-f3e-hierarchy-commands.md  2026-06-15-f3g-sync-daemon.md  2026-06-23-atlas-task-lease-claim.md
docs/superpowers/specs/: 2026-06-13-atlas-cli-sync-f3-design.md  2026-06-20-atlas-provenance-portfolio-design.md  2026-06-23-atlas-canon-enforcer-design.md  2026-06-23-atlas-skits-migration-design.md  2026-06-23-atlas-task-lease-claim-design.md  2026-06-23-atlas-type-canon-container-design.md
install/: INSTALL.md  install.ps1  install.sh
migrations/: env.py
migrations/versions/: 0a6b3db9f107_initial_mvp_schema.py  0b8a8a1bb61b_f3b_backend_id_outbox_cursor.py  0d172deaa09b_add_project_prefix_and_task_number_slug.py  13f6db0144ed_sprints_table_tasks_sprint_id.py  237c08c450f6_add_git_fields_to_projects.py  52cc9ef055b0_f3b_epic_checklist_taskmember.py  575396edfd76_create_backlog_items_table.py  5b893ab8883c_review_workflow_tasks_reviewer_id_.py  a2950921f1c4_add_inbox_project_type_and_allow_.py  a7b8c9d0e1f2_task_lease_optimistic_lock.py  ad1bb3559baf_drop_backlog_task_status_to_todo.py  b1d0100413fc_add_hypotheses_ledger.py  b8c9d0e1f2a3_epics_lease_optimistic_lock.py  c1d2e3f4a5b6_add_provenance_to_tasks_epics.py  c55f75e76e5b_add_tasks_archived_at_for_soft_delete.py  ca84c1d9b54e_add_entity_kind_to_projects_simplify_.py  d4e5f6a7b8c9_canon_storage_group_parent_id.py  d88bf4f8a629_tags_and_archive_engine.py  e05f29093f6e_create_issues_table.py  e34eb4327643_f3b_sync_policy_counterparty.py  e5f6a7b8c9d0_collapse_sprint_into_epic.py  f3f1a2b3c4d5_add_checklist_items_due_date.py
research/: inspect_schemas.py
research/schemas/: employees.json  files.json  orders.json  projects.json  tasks.json
scripts/: publish_public_github.sh  release_notes.py
skills/atlas/: .skillignore  SKILL.md  _skill_meta.toml
skills/atlas/agents/: project-initializer.md
skills/atlas/references/: agent-playbook.md  commands.md  projects-and-layout.md  sync-and-profiles.md
src/atlas/: __init__.py  _time.py  appconfig.py  backup.py  cli.py  client.py  dashboard.py  db.py  discipline.py  epic_worktree.py  files.py  git_backend.py  git_paths.py  ideas.py  index.py  junctions.py  keystore.py  layout.py  lease.py  logs.py  models.py  paths.py  projects.py  resolve.py  seeds.py  slugs.py  sprint.py  stats.py  tags.py  task_review.py  task_status.py  tasks.py  triage.py
src/atlas/commands/: __init__.py  _provision.py  action_log.py  backlog.py  backup.py  checklist.py  config.py  connect.py  dashboard.py  epic.py  epic_worktree.py  hypothesis.py  ideas.py  inbox.py  init.py  issue.py  log.py  logs.py  member.py  participants.py  profile.py  projects.py  projects_git.py  projects_layout.py  setup.py  sprint.py  stats.py  statuses.py  sync.py  tags.py  task.py  task_lease.py  types.py  upgrade.py
src/atlas/pm/: __init__.py  _time.py  backup.py  db.py  git_backend.py  git_paths.py  ideas.py  junctions.py  layout.py  lease.py  models.py  paths.py  seeds.py  slugs.py  stats.py  tags.py
src/atlas/pm/commands/: __init__.py  _provision.py  action_log.py  backup.py  checklist.py  epic.py  hypothesis.py  ideas.py  inbox.py  member.py  pm_tasks.py  (+12 more)
src/atlas/sync/: __init__.py  apply.py  backend_client.py  cursor.py  daemon.py  hub_service.py  mapper.py  outbox.py  policy.py  pull.py  push.py
src/notion_task_cli/: cli.py  config.py  dates.py  props.py
src/notion_task_cli/pm/: __init__.py  db.py  models.py  seeds.py
tests/: conftest.py  test_action_log_cli.py  test_agent_discipline.py  test_appconfig.py  test_backend_client_provision.py  test_backlog_cli.py  test_backup.py  test_backup_cli.py  test_canon_models.py  test_canon_onboarding_prompt.py  test_checklist_cli.py  test_checklist_sync_cli.py  test_cli_output_hoist.py  test_cli_root.py  test_clikit_dep.py  test_config_cli.py  test_connect_cli.py  test_dashboard.py  test_dates.py  test_db.py  test_db_profile.py  test_epic_cli.py  test_epic_provenance_cli.py  test_epic_worktree.py  test_f3b_hierarchy.py  test_f3b_models.py  test_f3b_sync_infra.py  test_git_backend.py  test_git_paths.py  test_grouplease.py  test_grouplease_cli.py  test_hub_service.py  test_hypothesis_cli.py  test_ideas.py  test_ideas_cli.py  test_index.py  test_issue_cli.py  test_junctions.py  test_keystore.py  test_layout.py  (+126 more)
(+32 files in other folders)
