[project]
name = "atlas"
version = "0.1.0"
description = "Atlas — PM-система для портфеля проектов и задач"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "python-dateutil>=2.9",
    "pytz>=2024.1",
    # PM-слой (Spike v0.4+)
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "python-frontmatter>=1.1",
    "python-slugify>=8.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-httpx>=0.32",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
atlas = "atlas.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
