[project]
# dist-имя atlas-pm (имя `atlas` занято, `atlas-cli` — too-similar по typosquatting-гейту
# PyPI); import-пакет и команда остаются `atlas`. Ставится: uv tool install atlas-pm /
# pipx install atlas-pm.
name = "atlas-pm"
version = "0.3.3"
description = "Atlas — local-first PM-система для портфеля проектов и задач"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Atlas CLI contributors" }]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "python-dateutil>=2.9",
    "pytz>=2024.1",
    # PM-слой (Spike v0.4+)
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "python-frontmatter>=1.1",
    "python-slugify>=8.0.4",
    # S-kits (PyPI; dist-name s-*, импорт-пакеты clikit/librarykit/adapterkit)
    "s-clikit>=0.1.6",
    "s-librarykit>=0.1.3",
    "s-adapterkit>=0.1.2",
    # agentskit — механизм онбординга AI-агентов (роль A) — с PyPI.
    "s-agentskit>=0.1.0",
    # issuekit — шаблоны/валидатор жалоб (богатая обратная связь передачи задач).
    "s-issuekit>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-httpx>=0.32",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
atlas = "atlas.cli:main"

[project.urls]
Homepage = "https://github.com/zZZTeJleTTy3uKZZz/atlas"
Repository = "https://github.com/zZZTeJleTTy3uKZZz/atlas"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]

# Миграции нужны в РАНТАЙМЕ (`atlas project init` → alembic upgrade), поэтому
# кладём их и alembic.ini ВНУТРЬ пакета (`atlas/migrations`, `atlas/alembic.ini`) —
# иначе pip/uvx/pipx-установка их не несёт и init падает (#880). В dev/editable
# `run_migrations` находит их в корне репо.
[tool.hatch.build.targets.wheel.force-include]
"migrations" = "atlas/migrations"
"alembic.ini" = "atlas/alembic.ini"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
